--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,9 +25,7 @@
       required: true,
       input_html: { autocomplete: "new-password" } %>
       <%= f.input :office_manager,
-      required: true, as: :boolean, checked_value: true, unchecked_value: false %>
-      <%= f.input :company_id,
-      required: true %>
+      required: false, as: :boolean, checked_value: true, unchecked_value: false %>
     </div>
 
     <div class="form-actions">
